Alon Braitstein 

21-02-2013
----------------
1. Bug fix, add 2 missing parameters to function to prevent warnnings.
 
Alon Braitstein 

02-05-2013
----------------
1. Add conversions api call in order confirmation page. currently only in 3.x versions.
 
03-07-2013
----------------
1. Spelling mistake in text
   