@@ -13,4 +13,7 @@ Alon Braitstein
 03-07-2013
 ----------------
 1. Spelling mistake in text
-   
+
+13-08-2013
+----------------
+1. Replace the select box of the widget language with a text input and link to codes   
